versioned_docs/version-1.22/testing/index.mdx
---
title: Okteto Test
description: In this section, we'll see how you can use Test Containers on Okteto
---

import Image from "@theme/Image";

# Welcome to Okteto Test `BETA`

Okteto Test is a new `Beta` feature designed to seamlessly integrate testing into your development workflow on the Okteto platform. Whether you're running unit tests or end-to-end (E2E) tests, Okteto Test ensures an efficient testing experience before and after making a pull request.

## Why Okteto Test?

This is how the software development process looks like for application based on microservicies before adopting Okteto:

<p align="center">
  <Image
    src={require("@site/static/img/classic-software-development.png").default}
    alt="Classic Software Development"
    width="850"
  />
</p>

Developers set up local development environments with tools like Docker Compose, CI (Continuous integration) runs tests on a dedicated virtual machine, and production runs on Kubernetes.
This setup leads to inconsistencies because the app runs on different platforms at different stages between (dev, CI, production), often resulting in unexpected bugs and integration issues.

After adopting Okteto for Development Environments, this is how the software development process looks like:

<p align="center">
  <Image
    src={require("@site/static/img/okteto-for-development.png").default}
    alt="Okteto for Development"
    width="850"
  />
</p>

Now your dev and production environments run on Kubernetes, reducing integration issues between dev and prod.
But there's still a gap: CI is running on a different platform. Why not leverage Okteto to run CI on Kubernetes as well?

<p align="center">
  <Image
    src={require("@site/static/img/okteto-for-testing.png").default}
    alt="Okteto for Testing"
    width="850"
  />
</p>

By using Okteto Test and Preview Environments, you can run CI on Okteto, and ensure your entire software development cycle runs on Kubernetes.
This minimizes integration and configuration issues, making your development process smoother and more efficient.

## Benefits of Okteto Test

### 1. Seamless Integration and Remote Execution
Developers can execute tests in the same remote production-like Kubernetes environment where their code runs - without having to install anything locally.
Running your tests in the cluster network simplifies access to private services, reduces latency, ensures consistency and reduces configuration overhead.

### 2. Simplified Configuration
The new `test` section in the [Okteto manifest](reference/okteto-manifest.mdx#test-object-optional) supports multiple Test Containers, allowing you to define your test environment with minimal YAML configuration.
This eliminates the need for complex setups and advanced Kubernetes knowledge.

### 3. Faster Feedback Loop
Okteto Test leverages Buildkit's built-in capabilities to run only the tests affected by code changes.
You can quickly identify and fix issues, especially in monorepos, significantly reducing the feedback loop for a development cycle.


## Getting Started with Okteto Test

View our [Getting Started with Okteto Test Guide](testing/getting-started-test.mdx) to learn how to configure Test Containers.

## Get Involved
Okteto Test is a Beta feature in development. We value your feedback and encourage you to share your experiences and suggestions. Join our [community](https://community.okteto.com/), participate in discussions, and help us improve Okteto Test.